--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <head>
     <section>
         <div class="form" style="text-align: center;">
-            <p><button onclick="window.open('Untitled.pdf', '_blank')">Sculpture</button></p>
+            <p><button onclick="window.open('Sculture1.pdf', '_blank')">Sculpture</button></p>
                 <button onclick="window.open('printmaking1.pdf', '_blank')">printmaking</button>
 
                 <p>Contact me on whatsapp:</p>
@@ -33,4 +33,5 @@
 </body>
 
 </html>
+
 
