--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <head>
     <section>
         <div class="form" style="text-align: center;">
-            <p><button onclick="window.open('sculpture2.pdf', '_blank')">Sculpture</button></p>
-                <button onclick="window.open('printmaking2.pdf', '_blank')">printmaking</button>
+            <p><button onclick="window.open('sculpture2.pdf', '_blank')">SCULPTURE</button></p>
+                <button onclick="window.open('printmaking2.pdf', '_blank')">PRINTMAKING</button>
 
                 <p>Contact me on whatsapp:</p>
                 <a href="https://wa.me/27663153527" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
@@ -33,6 +33,7 @@
 </body>
 
 </html>
+
 
 
 
