--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
                 <p>Contact me on whatsapp:</p>
                 <a href="https://wa.me/27663153527" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a>
+                <p>tshengwanek@gmail.com</p>
+        </div>
         </div>
     </section>
 </head>
@@ -33,6 +35,7 @@
 </body>
 
 </html>
+
 
 
 
